--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,7 @@ html {
 body {
   padding: 0;
   margin: 0;
+  font-family: "poppins", serif;
 }
 
 input,
@@ -29,10 +30,32 @@ button {
 
 .card {
   position: absolute;
-  background-color: #ffffff;
+  background-color: lightblue;
   width: 550px;
   height: 853px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.navbar {
+  height: 70px;
+  background-color: #ffffff;
+}
+
+.title {
+  padding-top: 22px;
+  padding-left: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  margin-right: 5px;
+}
+
+.sitename {
+  font-weight: 600;
+  color: #ff5a5f;
+  font-size: 1.1rem;
 }
