--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,7 @@ button {
 .navbar {
   height: 70px;
   background-color: #ffffff;
+  box-shadow: 0px 2.9825618267059326px 7.456404209136963px 0px #0000001a;
 }
 
 .title {
@@ -51,7 +52,7 @@ button {
 }
 
 .logo {
-  margin-right: 5px;
+  margin-right: 3px;
 }
 
 .sitename {
