--- a/public/style.css
+++ b/public/style.css
@@ -36,27 +36,64 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  border-radius: 9px 9px 9px 9px;
 }
 
 .navbar {
   height: 70px;
   background-color: #ffffff;
-  box-shadow: 0px 2.9825618267059326px 7.456404209136963px 0px #0000001a;
+  box-shadow: 0px 3px 7.5px 0px #0000001a;
+  border-radius: 9px 9px 0 0;
 }
 
-.title {
+.nav__title {
   padding-top: 22px;
   padding-left: 30px;
   display: flex;
   align-items: center;
 }
 
-.logo {
+.nav__logo {
   margin-right: 3px;
 }
 
-.sitename {
+.nav__sitename {
   font-weight: 600;
   color: #ff5a5f;
   font-size: 1.1rem;
+}
+
+.hero {
+  height: 451px;
+  background-color: #ffffff;
+}
+
+.hero__image__container {
+  display: flex;
+  justify-content: center;
+}
+
+.hero__image {
+  width: 396px;
+  height: 232px;
+  margin-top: 26px;
+}
+
+.hero__text__container {
+  margin-top: 32px;
+  margin-left: 36px;
+}
+
+.hero__title {
+  font-size: 36px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.hero__text {
+  margin-top: 15px;
+  font-size: 1rem;
+  font-weight: 400;
+  width: 320px;
+  line-height: 1.1;
 }
