--- a/public/style.css
+++ b/public/style.css
@@ -78,18 +78,20 @@ button {
 }
 
 .hero__text {
-  margin-top: 33px;
-  margin-left: 36px;
+    margin-left: 36px;
+    margin-top: 33px;
 }
 
 .hero__title {
   font-size: 36px;
   font-weight: 600;
   margin: 0;
+  line-height: 1.1;
 }
 
 .hero__content {
   margin-top: 15px;
+  margin-bottom: 49px;
   font-size: 1rem;
   font-weight: 400;
   width: 320px;
